[package]
name = "rusty-print"
version = "0.1.0"
authors = ["Ben Goldberg <jediben97@gmail.com>", "Tim Hollabaugh <timothyhollabaugh@gmail.com>"]

[lib]
name = "firmware"
path = "src/lib.rs"

[dependencies]
teensy3 = "0.1.3"
gcode = { path = "../gcode-rs"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
